# pyzusi3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml
examples/: interactiondemo.py
examples/autosifa/: appicon.afphoto  autosifa.py  autosifa.spec  form.qrc  form.ui  form_rc.py  form_ui.py  mainwindow.py  ui_form.py
examples/fahrpult/: main.py
examples/pyzusidisplay/: form.ui  form_ui.py  main.py  mainwindow.py  pyzusidisplay.py  requirements.txt  ui_form.py
pyzusi3/: client.py  exceptions.py  messagecoders.py  messages.py  nodes.py
pyzusi3/tests/: test_messagecoders.py  test_messages.py  test_nodes.py
